--- a/css/pageProjet.css
+++ b/css/pageProjet.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 10% 80% 10%;
+  grid-template-rows: 25% 55% 20%;
   grid-template-areas: 
     "header"
     "main  "
@@ -89,4 +89,25 @@ a.pages::after {
     gap: 20px;
     justify-content: space-evenly;
   }
+
+  .projet {
+    padding: 8em;
+    margin-top: 2em;
+    padding-top: 4em;
+    padding-bottom: 4em;
+    background-color: #F4CE14;
+    border-radius: 10px;
+    text-align: center; 
+    font-family: "Galindo", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projetImage {
+    height: 150px;
+    width: 150px;
+    margin-bottom: 30px; 
+}
+
   
