--- a/css/pageProjet.css
+++ b/css/pageProjet.css
@@ -1,15 +1,5 @@
 body {
-    margin:0;
-  /* align-items: center; */
-  background-color: rgba(255, 248, 215, 0.852);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 25% 55% 20%;
-  grid-template-areas: 
-    "header"
-    "main  "
-    "footer";
+    margin:0; 
 }
 /*************HEADER***************/
 #head {
@@ -91,10 +81,10 @@ a.pages::after {
   }
 
   .projet {
-    padding: 8em;
+    padding: 5em;
     margin-top: 2em;
-    padding-top: 4em;
-    padding-bottom: 4em;
+    padding-top: 3em;
+    padding-bottom: 3em;
     background-color: #F4CE14;
     border-radius: 10px;
     text-align: center; 
@@ -102,12 +92,48 @@ a.pages::after {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.projet:hover {
+  transform: scale(1.1); 
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); 
 }
 
 .projetImage {
-    height: 150px;
-    width: 150px;
-    margin-bottom: 30px; 
+  height: 150px;
+  width: 150px;
+  margin-bottom: 30px;
 }
+
+footer {
+  background-color: #45474B;
+  display: flex;
+  flex-direction: row;
+  height: 15rem;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
+footer p a {
+  color: #F5F7F8;
+  font-family: "Galindo";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2px;
+  text-decoration: none;
+}
+footer p a:hover {
+  text-decoration: underline;
+}
+
+footer img {
+  height: 10rem;
+}
+
+
 
   
