--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -75,6 +75,8 @@ a.pages::after {
     display: flex;
     padding: 20px;
     gap: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 #listeProjets {
@@ -82,6 +84,10 @@ a.pages::after {
     flex-direction: column;
     gap: 10px;
     width: 40%;
+    max-height: 500px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
 
 .projet {
@@ -107,8 +113,10 @@ a.pages::after {
 
 .placeholder {
     height: 30px;
-    background-color: #D9D9D9;
     border-radius: 5px;
+    text-align: center;
+    font-family: "Galindo";
+    background-color: #D9D9D9;
 }
 
 .graphique {
@@ -116,7 +124,7 @@ a.pages::after {
   background-color: #F5F5F5;
   border-radius: 5px;
   position: relative;
-  height: 200px; 
+  height: 400px; 
   width: 100%;
   display: flex;
   align-items: flex-end;
