--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -74,7 +74,7 @@ a.pages::after {
   main {
     display: flex;
     padding: 20px;
-    gap: 20px;
+    gap: 20px;  
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -82,22 +82,37 @@ a.pages::after {
 #listeProjets {
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
     gap: 10px;
-    width: 40%;
     max-height: 500px;
-    overflow-y: auto;
-    border: 1px solid #ccc;
-    padding: 10px;
+    width: 20%;
+    margin-right: 20px;
+    border-color: black;
+}
+
+#listeProjets::-webkit-scrollbar {
+  display: none; 
 }
 
 .projet {
     background-color: #D9D9D9;
     padding: 10px;
+    margin-top: 10px;
+    width: 70%;
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
     text-align: center;
 }
+
+.projet.highlight {
+  transform: scale(1.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  background-color: #a09d9d;
+  border-radius: 5px; 
+}
+
 
 .projet:hover {
   background-color: #6F6F6F;
@@ -111,9 +126,21 @@ a.pages::after {
     gap: 20px;
 }
 
-.placeholder {
+#titre {
     height: 30px;
+    width: 50%;
     border-radius: 5px;
+    align-self: center;
+    text-align: center;
+    font-family: "Galindo";
+    background-color: #D9D9D9;
+}
+
+#description{
+    height: 40px;
+    border-radius: 5px;
+    width: 100%;
+    align-self: center;
     text-align: center;
     font-family: "Galindo";
     background-color: #D9D9D9;
@@ -144,13 +171,13 @@ a.pages::after {
               linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.1) 20%);
   background-size: 20px 40px;
 }
-/* 
+/*
 .bar {
   width: 8%;
   background-color: blue;
   border-radius: 3px;
 }
-*/
+
 
 .bar:nth-child(1) { height: 20%; }
 .bar:nth-child(2) { height: 35%; }
@@ -159,7 +186,7 @@ a.pages::after {
 .bar:nth-child(5) { height: 45%; }
 .bar:nth-child(6) { height: 60%; }
 .bar:nth-child(7) { height: 55%; }
-
+*/
 
 html, body {
   height: 100%;
