--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -106,7 +106,7 @@ a.pages::after {
 }
 
 .projet.highlight {
-  transform: scale(1.2);
+  transform:scale(1.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   background-color: #a09d9d;
@@ -157,6 +157,7 @@ a.pages::after {
   align-items: flex-end;
   justify-content: space-around;
   padding: 10px;
+  border: 1px solid #ccc;
 }
 
 
@@ -171,22 +172,41 @@ a.pages::after {
               linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.1) 20%);
   background-size: 20px 40px;
 }
-/*
-.bar {
-  width: 8%;
-  background-color: blue;
-  border-radius: 3px;
+
+.graphique .point {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  border-radius: 50%;
+  position: absolute;
 }
 
+.graphique .line {
+  position: absolute;
+  height: 2px;
+  background-color: black;
+  transform-origin: left center;
+}
 
-.bar:nth-child(1) { height: 20%; }
-.bar:nth-child(2) { height: 35%; }
-.bar:nth-child(3) { height: 30%; }
-.bar:nth-child(4) { height: 50%; }
-.bar:nth-child(5) { height: 45%; }
-.bar:nth-child(6) { height: 60%; }
-.bar:nth-child(7) { height: 55%; }
-*/
+/* Exemple de positionnement des points et lignes */
+.point:nth-child(1) { left: 10%; bottom: 30%; }
+.point:nth-child(2) { left: 20%; bottom: 60%; }
+.point:nth-child(3) { left: 30%; bottom: 40%; }
+.point:nth-child(4) { left: 40%; bottom: 42%; }
+.point:nth-child(5) { left: 50%; bottom: 55%; }
+.point:nth-child(6) { left: 60%; bottom: 25%; }
+.point:nth-child(7) { left: 70%; bottom: 50%; }
+.point:nth-child(8) { left: 80%; bottom: 70%; }
+.point:nth-child(9) { left: 90%; bottom: 90%; }
+
+.line:nth-child(10) { left: 10%; bottom: 30%; width: 15%; transform: rotate(-47deg); }
+.line:nth-child(11) { left: 20%; bottom: 60%; width: 10%; transform: rotate(-20deg); }
+.line:nth-child(12) { left: 30%; bottom: 40%; width: 10%; transform: rotate(5deg); }
+.line:nth-child(13) { left: 40%; bottom: 42%; width: 10%; transform: rotate(15deg); }
+.line:nth-child(14) { left: 50%; bottom: 55%; width: 10%; transform: rotate(-45deg); }
+.line:nth-child(15) { left: 60%; bottom: 25%; width: 10%; transform: rotate(35deg); }
+.line:nth-child(16) { left: 70%; bottom: 50%; width: 10%; transform: rotate(25deg); }
+.line:nth-child(17) { left: 80%; bottom: 70%; width: 10%; transform: rotate(20deg); }
 
 html, body {
   height: 100%;
