--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -160,7 +160,6 @@ a.pages::after {
   border: 1px solid #ccc;
 }
 
-
 .graphique::before {
   content: "";
   position: absolute;
@@ -168,9 +167,9 @@ a.pages::after {
   left: 10px;
   right: 10px;
   bottom: 10px;
-  background: linear-gradient(to right, transparent 10%, rgba(0, 0, 0, 0.1) 10%),
-              linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.1) 20%);
-  background-size: 20px 40px;
+  background: linear-gradient(to right, transparent 10%, rgba(0, 0, 0, 0.1) 10%);
+              /*linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.2) 20%);*/
+  background-size: 100px 100px;
 }
 
 .graphique .point {
@@ -189,24 +188,26 @@ a.pages::after {
 }
 
 /* Exemple de positionnement des points et lignes */
-.point:nth-child(1) { left: 10%; bottom: 30%; }
-.point:nth-child(2) { left: 20%; bottom: 60%; }
-.point:nth-child(3) { left: 30%; bottom: 40%; }
-.point:nth-child(4) { left: 40%; bottom: 42%; }
-.point:nth-child(5) { left: 50%; bottom: 55%; }
-.point:nth-child(6) { left: 60%; bottom: 25%; }
-.point:nth-child(7) { left: 70%; bottom: 50%; }
-.point:nth-child(8) { left: 80%; bottom: 70%; }
-.point:nth-child(9) { left: 90%; bottom: 90%; }
+.point:nth-child(1) { left: 5%;  bottom: 5%; }
+.point:nth-child(2) { left: 10%; bottom: 30%; }
+.point:nth-child(3) { left: 20%; bottom: 60%; }
+.point:nth-child(4) { left: 30%; bottom: 40%; }
+.point:nth-child(5) { left: 40%; bottom: 42%; }
+.point:nth-child(6) { left: 50%; bottom: 55%; }
+.point:nth-child(7) { left: 60%; bottom: 25%; }
+.point:nth-child(8) { left: 70%; bottom: 95%; }
+.point:nth-child(9) { left: 80%; bottom: 70%; }
+.point:nth-child(10){ left: 90%; bottom: 90%; }
 
-.line:nth-child(10) { left: 10%; bottom: 30%; width: 15%; transform: rotate(-47deg); }
-.line:nth-child(11) { left: 20%; bottom: 60%; width: 10%; transform: rotate(-20deg); }
-.line:nth-child(12) { left: 30%; bottom: 40%; width: 10%; transform: rotate(5deg); }
-.line:nth-child(13) { left: 40%; bottom: 42%; width: 10%; transform: rotate(15deg); }
-.line:nth-child(14) { left: 50%; bottom: 55%; width: 10%; transform: rotate(-45deg); }
-.line:nth-child(15) { left: 60%; bottom: 25%; width: 10%; transform: rotate(35deg); }
-.line:nth-child(16) { left: 70%; bottom: 50%; width: 10%; transform: rotate(25deg); }
-.line:nth-child(17) { left: 80%; bottom: 70%; width: 10%; transform: rotate(20deg); }
+.line:nth-child(11) { }
+.line:nth-child(12) { }
+.line:nth-child(13) { }
+.line:nth-child(14) { }
+.line:nth-child(15) { }
+.line:nth-child(16) { }
+.line:nth-child(17) { }
+.line:nth-child(18) { }
+.line:nth-child(19) { }
 
 html, body {
   height: 100%;
