--- a/css/compte.css
+++ b/css/compte.css
@@ -133,4 +133,8 @@ input[type=button]:hover {
     background-color: #c98b89;
     
 }
+input[type=button].loading {
+    background-color: #D9D9D9;
+    pointer-events: none;
+}
 
