--- a/css/compte.css
+++ b/css/compte.css
@@ -40,6 +40,25 @@ header {
     display: flex;
     
 }
+
+#errorSection {
+    background-color: rgba(255, 0, 0, 0.466);
+    margin: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    width: 80%;
+    padding: 0px;
+}
+#errorSection:not(:empty) {
+    padding: 10px;
+}
+
+h3 {
+    margin: 0px;
+    font-weight: bold;
+    display: inline-block;
+}
+
 a.pages {       
     display: block;
     position: relative;
