--- a/css/projets.css
+++ b/css/projets.css
@@ -14,6 +14,30 @@ body {
     height: 9rem;
 }
 
+#sectionAjouter {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width:91.5%;
+    display: flex;
+    justify-content:space-between;
+    font-family: "Galindo", sans-serif;
+}
+
+#ajoutProjet {
+  padding: 10px;
+  background-color: #F4CE14;
+  border-style:hidden;
+  border-radius: 10px;
+  width: 13%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#ajoutProjet:hover{
+  transform: scale(1.1); 
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.096); 
+  cursor: pointer;
+}
+
 #logo {
     height: 10rem;
     position: relative;
