--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -1,215 +1,218 @@
 body {
-    margin:0;
+  margin:0;
 }
 /*************HEADER***************/
 #head {
-    grid-area: header;
-    background-color: FCDE70;
-    display: flex;
-    margin:0;
-    font-family: 'Junge';
-    color: 45474B;
-    font-size: x-large;
-    align-items: center;
-    height: 9rem;
+  grid-area: header;
+  background-color: FCDE70;
+  display: flex;
+  margin:0;
+  font-family: 'Junge';
+  color: 45474B;
+  font-size: x-large;
+  align-items: center;
+  height: 9rem;
 }
 
 #logo {
-    height: 10rem;
-    position: relative;
-    margin: 0.1rem;
-    z-index: 2;
+  height: 10rem;
+  position: relative;
+  margin: 0.1rem;
+  z-index: 2;
 }
 
 #circle {
-    height: 8rem;
-    width: 8rem;
-    background-color: white;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 1;
-    margin:1rem;
+  height: 8rem;
+  width: 8rem;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  margin:1rem;
 }
 
 #nav {
-    background-color: E8B86D;
-    margin: 0;
-    display: flex;
-    
+  background-color: E8B86D;
+  margin: 0;
+  display: flex;
+  
 }
 /*****ACCUEIL-PROJETS-GRAPHIQUE-COMPTE*****/
 a.pages {       
-    display: block;
-    position: relative;
-    padding: 0.2em 0;
-    color: white;
-    text-decoration: none;
-    margin-left: 3em;
-    margin-top:0.5em;
-    margin-right: 3em;
-    margin-bottom: 0.5em;
-    font-family: "Galindo";
+  display: block;
+  position: relative;
+  padding: 0.2em 0;
+  color: white;
+  text-decoration: none;
+  margin-left: 3em;
+  margin-top:0.5em;
+  margin-right: 3em;
+  margin-bottom: 0.5em;
+  font-family: "Galindo";
 }
 
 a.pages::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0.15em;
-    background-color: rgb(31, 27, 27);
-    border-radius: 10px;
-    opacity: 0;
-    transition: opacity 300ms, transform 300ms;
-  }
-  
-  a.pages:hover::after,
-  a.pages:focus::after {
-    opacity: 1;
-    transform: translate3d(0, 0.15em, 0);
-  }
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.15em;
+  background-color: rgb(31, 27, 27);
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+}
 
-  /******MAIN******/
-  main {
-    display: flex;
-    padding: 20px;
-    gap: 20px;  
-    margin-top: 30px;
-    margin-bottom: 30px;
+a.pages:hover::after,
+a.pages:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0.15em, 0);
+}
+
+/******MAIN******/
+main {
+  display: flex;
+  padding: 20px;
+  gap: 20px;  
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #listeProjets {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    gap: 10px;
-    max-height: 500px;
-    width: 20%;
-    margin-right: 10px;
-    border-color: black;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  gap: 10px;
+  max-height: 500px;
+  width: 20%;
+  margin-right: 10px;
+  border-color: black;
 }
 
 #listeProjets::-webkit-scrollbar {
-  display: none; 
+display: none; 
 }
 
 .projet {
-    background-color: #D9D9D9;
-    padding: 10px;
-    margin-top: 10px;
-    width: 80%;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
-    text-align: center;
+  background-color: #D9D9D9;
+  padding: 10px;
+  margin-top: 10px;
+  width: 80%;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
 }
 
 .projet.highlight {
-  transform:scale(1.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  background-color: #a09d9d;
-  border-radius: 5px; 
+transform:scale(1.2);
+transition: transform 0.3s ease, box-shadow 0.3s ease;
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+background-color: #a09d9d;
+border-radius: 5px; 
 }
 
 
 .projet:hover {
-  background-color: #6F6F6F;
-  color: white;
+background-color: #6F6F6F;
+color: white;
 }
 
 #contenuProjet {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 #titre {
-    height: 30px;
-    width: 50%;
-    border-radius: 5px;
-    align-self: center;
-    text-align: center;
-    font-family: "Galindo";
-    background-color: #D9D9D9;
+  height: 30px;
+  width: 50%;
+  border-radius: 5px;
+  align-self: center;
+  text-align: center;
+  font-family: "Galindo";
+  background-color: #D9D9D9;
 }
 
 #description{
-    height: 40px;
-    border-radius: 5px;
-    width: 100%;
-    align-self: center;
-    text-align: center;
-    font-family: "Galindo";
-    background-color: #D9D9D9;
+  height: 40px;
+  border-radius: 5px;
+  width: 80%;
+  margin-right: 10%;
+  margin-left: 10%;
+  align-self: center;
+  text-align: center;
+  font-family: "Galindo";
+  background-color: #D9D9D9;
 }
 
 .graphique {
-  flex-grow: 1;
-  background-color: #F5F5F5;
-  border-radius: 5px;
-  overflow: visible;
-  position: relative;
-  height: 400px; 
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
-  margin:0px;
-  padding: 0px;
-  border: 1px solid #ccc;
+flex-grow: 1;
+background-color: #F5F5F5;
+border-radius: 5px;
+overflow: visible;
+position: relative;
+height: 400px; 
+width: 60%;
+display: flex;
+align-items: flex-end;
+justify-content: space-around;
+margin:0px;
+margin-left:20%;
+padding: 0px;
+border: 1px solid #ccc;
 }
 
 .graphique::before {
-  content: "";
-  position: absolute;
-  overflow: visible;
-  top: 0px;
-  left: 10px;
-  right: 10px;
-  bottom: 0px;
-  background: linear-gradient(to right, transparent 10%, rgba(0, 0, 0, 0.1) 10%);
-              /*linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.2) 20%);*/
-  background-size: 100px 100px;
+content: "";
+position: absolute;
+overflow: visible;
+top: 0px;
+left: 10px;
+right: 10px;
+bottom: 0px;
+background: linear-gradient(to right, transparent 10%, rgba(0, 0, 0, 0.1) 10%);
+            /*linear-gradient(to top, transparent 20%, rgba(0, 0, 0, 0.2) 20%);*/
+background-size: 100px 100px;
 }
 
 .graphique svg {
-  clip-path: none; 
-  overflow: visible;
+clip-path: none; 
+overflow: visible;
 }
 
 .tooltip {
-  position: absolute;
-  background: white;
-  border: 1px solid black;
-  padding: 5px;
-  border-radius: 5px;
-  font-size: 14px;
-  pointer-events: none; /* Évite d'intercepter les événements de la souris */
-  visibility: hidden;
-  z-index: 10;
+position: absolute;
+background: white;
+border: 1px solid black;
+padding: 5px;
+border-radius: 5px;
+font-size: 14px;
+pointer-events: none; /* Évite d'intercepter les événements de la souris */
+visibility: hidden;
+z-index: 10;
 }
 
 
 /*
 .graphique .point {
-  width: 10px;
-  height: 10px;
-  background-color: black;
-  border-radius: 50%;
-  position: absolute;
+width: 10px;
+height: 10px;
+background-color: black;
+border-radius: 50%;
+position: absolute;
 }
 
 .graphique .line {
-  position: absolute;
-  height: 2px;
-  background-color: black;
-  transform-origin: left center;
+position: absolute;
+height: 2px;
+background-color: black;
+transform-origin: left center;
 }
 
-   Exemple de positionnement des points et lignes
+ Exemple de positionnement des points et lignes
 .point:nth-child(1) { left: 5%;  bottom: 5%; }
 .point:nth-child(2) { left: 10%; bottom: 30%; }
 .point:nth-child(3) { left: 20%; bottom: 60%; }
@@ -234,36 +237,35 @@ a.pages::after {
 
 
 html, body {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+height: 100%;
+margin: 0;
+display: flex;
+flex-direction: column;
 }
 
 footer {
-  background-color: #45474B;
-  display: flex;
-  flex-direction: row;
-  height: 15rem;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: auto;
+background-color: #45474B;
+display: flex;
+flex-direction: row;
+height: 15rem;
+justify-content: space-around;
+align-items: center;
+margin-top: auto;
 }
-  
-  footer p a {
-    color: #F5F7F8;
-    font-family: "Galindo";
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 2px;
-    text-decoration: none;
-  }
-  footer p a:hover {
-    text-decoration: underline;
-  }
-  
-  footer img {
-    height: 10rem;
-  }
-  
+
+footer p a {
+  color: #F5F7F8;
+  font-family: "Galindo";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2px;
+  text-decoration: none;
+}
+footer p a:hover {
+  text-decoration: underline;
+}
+
+footer img {
+  height: 10rem;
+}
