--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -103,6 +103,12 @@ display: none;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
+  color: black;
+  text-decoration: none; 
+}
+
+.projet a {
+  text-decoration: none; 
 }
 
 .projet.highlight {
@@ -190,51 +196,10 @@ border: 1px solid black;
 padding: 5px;
 border-radius: 5px;
 font-size: 14px;
-pointer-events: none; /* Évite d'intercepter les événements de la souris */
+pointer-events: none; 
 visibility: hidden;
 z-index: 10;
 }
-
-
-/*
-.graphique .point {
-width: 10px;
-height: 10px;
-background-color: black;
-border-radius: 50%;
-position: absolute;
-}
-
-.graphique .line {
-position: absolute;
-height: 2px;
-background-color: black;
-transform-origin: left center;
-}
-
- Exemple de positionnement des points et lignes
-.point:nth-child(1) { left: 5%;  bottom: 5%; }
-.point:nth-child(2) { left: 10%; bottom: 30%; }
-.point:nth-child(3) { left: 20%; bottom: 60%; }
-.point:nth-child(4) { left: 30%; bottom: 40%; }
-.point:nth-child(5) { left: 40%; bottom: 42%; }
-.point:nth-child(6) { left: 50%; bottom: 55%; }
-.point:nth-child(7) { left: 60%; bottom: 25%; }
-.point:nth-child(8) { left: 70%; bottom: 95%; }
-.point:nth-child(9) { left: 80%; bottom: 70%; }
-.point:nth-child(10){ left: 90%; bottom: 90%; }
-
-.line:nth-child(11) { }
-.line:nth-child(12) { }
-.line:nth-child(13) { }
-.line:nth-child(14) { }
-.line:nth-child(15) { }
-.line:nth-child(16) { }
-.line:nth-child(17) { }
-.line:nth-child(18) { }
-.line:nth-child(19) { }
-*/
-
 
 html, body {
 height: 100%;
