--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -75,7 +75,7 @@ main {
   display: flex;
   padding: 20px;
   gap: 20px;  
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 30px;
 }
 
@@ -142,7 +142,11 @@ color: white;
 }
 
 #description{
-  height: 40px;
+  padding:7px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  height: 70px;
   border-radius: 5px;
   width: 80%;
   margin-right: 10%;
@@ -151,6 +155,9 @@ color: white;
   text-align: center;
   font-family: "Galindo";
   background-color: #D9D9D9;
+}
+#description div {
+  flex: 0 0 calc(33.333% - 10px);
 }
 
 .graphique {
