--- a/css/compte.css
+++ b/css/compte.css
@@ -91,7 +91,7 @@ a.pages::after {
     transform: translate3d(0, 0.15em, 0);
   }
 
-form {
+form, #adminDiv {
     margin: 3rem;
     display: flex;
     flex-direction: column;
@@ -155,5 +155,40 @@ input[type=button]:hover {
 input[type=button].loading {
     background-color: #D9D9D9;
     pointer-events: none;
+}
+.client-card {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    padding: 12px;
+    margin: 10px 0;
+    background-color: #f9f9f9;
+    width: 80%;
+    font-family: "Galindo";
+}
+
+.client-card h3 {
+    margin: 0 0 8px;
+}
+
+.client-card p {
+    margin: 4px 0 12px;
+}
+
+.btn {
+    padding: 6px 12px;
+    margin-right: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn-modify {
+    background-color: #FCDE70;
+    color: white;
+}
+
+.btn-delete {
+    background-color: #dc3545;
+    color: white;
 }
 
