--- a/css/ajoutProjet.css
+++ b/css/ajoutProjet.css
@@ -20,20 +20,21 @@ header {
 }
 
 #logo {
-    height: 8rem;
+    height: 10rem;
     position: relative;
-    margin: 1rem;
+    margin: 0.1rem;
     z-index: 2;
-}
+  }
 #circle {
     height: 8rem;
     width: 8rem;
-    background-color: #F5F7F8;
+    background-color: white;
     border-radius: 50%;
     position: absolute;
     z-index: 1;
     margin:1rem;
-}
+  }
+  
 #nav {
     background-color: #E8B86D;
     margin: 0;
