--- a/css/graphiques.css
+++ b/css/graphiques.css
@@ -98,7 +98,8 @@ display: none;
   background-color: #D9D9D9;
   padding: 10px;
   margin-top: 10px;
-  width: 80%;
+  width: 70%;
+  margin-left: 10%;
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
