--- a/css/accueil.css
+++ b/css/accueil.css
@@ -106,6 +106,10 @@ main {
     padding-bottom: 10rem; 
 }
 
+svg text {
+    font-family: 'Galindo', cursive;
+  }  
+
 #accueil-grid {
     display: grid;
     grid-template-areas: 
@@ -138,8 +142,15 @@ main {
     grid-area: graph3;
 }
 
+
+#graph2 svg{
+    transform: scale(1.5);
+    transform-origin: center;
+}
+
+
 .chart-box {
-    background-color: white;
+    
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     padding: 1rem;
@@ -151,12 +162,6 @@ main {
     position: relative; 
     z-index: 0; 
 }
-#graph1 svg,
-#graph2 svg{
-    transform: scale(1.5);
-    transform-origin: center;
-}
-
 
 .chart-box svg {
     transform: scale(1.1);
@@ -164,8 +169,6 @@ main {
     position: relative;
     z-index: 0; 
 }
-
-
 
 .text-box {
     background-color: #fff8e1;
