avancement historique reste a faire peut etre des filtres et ajouter creer projet comme action d'historique

--- a/css/historique.css
+++ b/css/historique.css
@@ -122,6 +122,10 @@ a.pages:focus::after {
     color: red;
 }
 
+.action .amount.budget {
+    color: blue;
+}
+
 footer {
     background-color: #45474B;
     display: flex;
