--- a/css/projets.css
+++ b/css/projets.css
@@ -101,7 +101,6 @@ a.pages:focus::after {
 
 .wiggly {
   width: 310px;
-  /* padding: 3em; */
   margin-top: 1em;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -110,8 +109,8 @@ a.pages:focus::after {
   color: black;
   text-align: center; 
   font-family: "Galindo", sans-serif;
-  font-size: 1.4em; /* Increased font size */
-  font-weight: bold; /* Bold text */
+  font-size: 1.4em; 
+  font-weight: bold; 
   display: flex;
   flex-direction: column;
   align-items: center;
